--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -14,13 +14,15 @@
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
-        <img src=
-          {% if teaser contains "://" %}
-            "{{ teaser }}"
-          {% else %}
-            "{{ teaser | relative_url }}"
-          {% endif %}
-          alt="">
+        <a href="{{ post.url | relative_url }}" rel="permalink">
+          <img src=
+            {% if teaser contains "://" %}
+              "{{ teaser }}"
+            {% else %}
+              "{{ teaser | relative_url }}"
+            {% endif %}
+            alt="">
+        </a>
       </div>
     {% endif %}
     <h2 class="archive__item-title" itemprop="headline">
@@ -35,7 +37,7 @@
     {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
     
-    <p>{% include project-info.html owner=post.owner trl=post.trl environment=post.environment %}</p>
+    <p class="archive__item-excerpt">{% include project-info.html owner=post.owner trl=post.trl environment=post.environment %}</p>
     
   </article>
 </div>
