--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -18,4 +18,4 @@ layout: single
 {% endif %}
 
 <h3>Additional Informations</h3>
-<p>{% include project-info.html owner=page.owner trl=page.trl environment=page.environment %}</p>
+<p style="font-size:.75em;">{% include project-info.html owner=page.owner trl=page.trl environment=page.environment %}</p>
