--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 ---
+<p style="font-size:.75em;">{% include project-info.html owner=page.owner trl=page.trl environment=page.environment %}</p>
 
 {{ content }}
 
